[project]
 name = "Project3"
 version = "1.0"
 dependencies = [
     "numpy",
     "scipy",
     "matplotlib",
     "mplhep",
     "iminuit",
     "emcee",
     "pandas",
     "tqdm",
 ]
 authors = [
     {name = "Andrew Dowling", email = "ajdowlin@syr.edu"},
     {name = "Labani Roy", email = "lroy02@syr.edu"},
 ]
 description = "Project 3"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]

 [project.urls]
 "Homepage" = "https://github.com/labani-01/Project_3/tree/main"%